# secure-product-model

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TODOs  hugo.toml  pyproject.toml
.zed/: settings.json
assets/icons/: README.md
content/: license.md
content/about/: _index.md
content/assets/: _index.md
content/assets/cloud-environment/: _index.md
content/controls/account/: _index.md
content/model/: _index.md
content/resources/: _index.md
data/: Control Framework - Controls.csv  Control Framework - Governance.csv  assets.yml  controls.yml  governance.yml
docs/: ASSET_ICON_COLORS.md  Control Framework - Assets.csv  Control Framework - Controls.csv  Control Framework - Governance.csv  concept.md
layouts/: index.html
layouts/_default/: baseof.html  list.html
layouts/shortcodes/: rawhtml.html
scripts/: assets2md.py  csv2yaml.py  framework-sync.py  generate-assets-page.py  generate-control-pages.py  generate-governance-pages.py  governance2md.py
scripts/templates/: README.md  assets.css  assets.j2  assets.js  control-category.j2  control-item.css  control-item.j2  control.css  control.j2  control.js  governance-category.js  governance-item.css  governance-item.j2  governance-item.js  governance.css  governance.j2  governance.js
static/css/: style.css
website/: README.md  deploy.sh  hugo.toml
website/assets/icons/: README.md
website/content/: _index.md  license.md
website/content/controls/: _index.md
website/content/controls/account/: _index.md  account-lockout.md  default-accounts-are-deleted-or-disabled-no-default-permissions-deny-all.md  elevated-access.md  inactive-accounts-disabled-removed.md  (+5 more)
website/content/governance/: _index.html  _index.md
website/layouts/: index.html
website/layouts/_default/: baseof.html  single.html
website/layouts/partials/: icon.html
website/layouts/shortcodes/: attribution.html  license-file.html
website/static/: browserconfig.xml  site.webmanifest
(+186 files in other folders)
